
\name{NEWS}
\title{NEWS file for the \pkg{tbm} package}

\section{Changes in Version 0.3-0 (2019-04-03)}{
  \itemize{
    \item Package \pkg{tbm} published on CRAN.
    }
}