@@ -7,7 +7,8 @@ importFrom("basefun", "intercept_basis")
 importFrom("variables", "mkgrid")
 importFrom("stats", "coef", "fitted", "model.matrix", 
            "na.omit", "complete.cases", "logLik", "predict", 
-           "model.frame", "model.weights", "variable.names")
+           "model.frame", "model.weights", "variable.names", 
+           "update", "resid")
 importFrom("methods", "as")
 
 export("ctmboost", "stmboost")
