@@ -2,8 +2,16 @@
 \name{NEWS}
 \title{NEWS file for the \pkg{tbm} package}
 
+\section{Changes in Version 0.3-1 (2019-10-04)}{
+  \itemize{
+    \item Re-write \code{stmboost} using the new \code{resid}
+          method in \pkg{mlt}; this results in faster and simpler code.
+    }
+}
+
 \section{Changes in Version 0.3-0 (2019-04-03)}{
   \itemize{
     \item Package \pkg{tbm} published on CRAN.
     }
 }
+
